--- a/style.css
+++ b/style.css
@@ -1139,15 +1139,17 @@ body {
 
   .testimonial-slide {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
+    left: 0;
+    right: 0;
     padding: 0 1rem;
     opacity: 0;
     transition: opacity 0.6s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    font-size: 1rem;
-    line-height: 1.5;
   }
 
   .testimonial-slide.active {
@@ -1155,12 +1157,18 @@ body {
     opacity: 1;
   }
 
+  .testimonial-slide p,
   .testimonial-slide span {
-    display: block;
+    max-width: 100%;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .testimonial-slide span {
     margin-top: 1rem;
     font-weight: 500;
     color: var(--yellow);
-    text-align: center;
   }
 
   .carousel-btn {
