--- a/style.css
+++ b/style.css
@@ -1188,7 +1188,7 @@ body {
     font-size: 1rem;
   }
 
-.testimonial-carousel {
+  .testimonial-carousel {
     padding: 50px 1.5rem;
     text-align: center;
   }
@@ -1207,17 +1207,13 @@ body {
 
   .testimonial-slide {
     position: absolute;
-    width: 100%;
+    top: 0;
     left: 0;
-    right: 0;
-    padding: 0 1rem;
+    width: 100%;
     opacity: 0;
     transition: opacity 0.6s ease;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     text-align: center;
+    display: block;
   }
 
   .testimonial-slide.active {
@@ -1227,10 +1223,11 @@ body {
 
   .testimonial-slide p,
   .testimonial-slide span {
-    max-width: 100%;
-    width: 100%;
-    text-align: center;
+    display: block;
     margin: 0 auto;
+    text-align: center;
+    max-width: 100%;
+    width: fit-content;
   }
 
   .testimonial-slide span {
