--- a/style.css
+++ b/style.css
@@ -1195,7 +1195,8 @@ body {
 
   .testimonial-title {
   font-size: 1.6rem;
-
+  }
+  
   .carousel-container {
     position: relative;
     width: 100%;
