--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ body {
 }
 
 .scroll-indicator a {
-  color: var(--black);
+  color: var(--yellow);
   text-decoration: none;
   display: flex;
   align-items: center;
