--- a/style.css
+++ b/style.css
@@ -963,7 +963,7 @@ body {
 .gallery-title {
   font-size: 2.4rem;
   font-weight: 600;
-  color: white;
+  color: var(--yellow);
   margin-bottom: 1rem;
 }
 
@@ -1096,6 +1096,7 @@ body {
     font-size: 2.4rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
+    color: var(--yellow)
   }
 
   .contact-hero p {
