--- a/style.css
+++ b/style.css
@@ -1028,7 +1028,7 @@ body {
 .track-event {
   animation-duration: 50s;
 }
-.track-jewelry {
+.track-jewellery {
   animation-duration: 30s;
 }
 .track-clothing {
