--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #fff;
+  background-color: var(--purple);
 }
 
 /* --------------------------------------------
