--- a/style.css
+++ b/style.css
@@ -773,6 +773,19 @@ body {
   margin-top: 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+
 
 /* --------------------------------------------
            ABOUT PAGE FOUNDER SECTION
